--- a/project-bootstrap/includes/css/styles.css
+++ b/project-bootstrap/includes/css/styles.css
@@ -18,9 +18,11 @@ Notes:	 Hand coded for Udemy.com
           font-size: 70px;
    }
    .jumbotron{
-    height:300px;
+
+    max-height:600px;
      margin-top: 20px;
      padding-top: 10px;
+
    }
  .jumbotron p{
    font-family: 'Open Sans';
@@ -47,29 +49,37 @@ Notes:	 Hand coded for Udemy.com
    font-family: 'Open Sans';
  }
 
-.well{
-  height: 425px;
+.sub-content {
+
+  background-color: #fff;
+  margin-bottom: 30px;
+  padding: 20px 0px 20px 15px;
 }
 
-.well p,.well ul{
+.sub-content p, .sub-content ul{
   font-family: 'Open Sans';
   font-size: 16px;
-    margin-left:650px;
+
+
 }
- .well .page-header {
+ .sub-content .page-header {
+   text-align: center;
  	margin-top: 0;
  }
 
- .well .page-header h1 {
+ .sub-content .page-header h1 {
    font-size: 70px;
     font-family: 'Tangerine', sans-serif;
- 	margin-top: 0;
+ 	  margin-top: 0;
  }
- .well img {
-   width:620px;
-	 height:280px;
-		float:left;
+ .sub-content img {
+   width: 100%;
+   height: auto;
+	 max-height:350px;
+   min-height:200px;
+
  }
+
 
  footer {
  	background: #333;
@@ -100,61 +110,53 @@ Notes:	 Hand coded for Udemy.com
 /* --------------------------------------
    Navbar
    -------------------------------------- */
-#logo {
- width:80px;
- height:80px;
- border-radius: 100px;
- border:2px solid black;
- position: absolute;
- top:30px;
- left:10px;
- z-index: +1500;
 
-   }
-pre span{
-  color:black;
-}
-#header{
-  margin-top: 0px;
-}
+
+
+
 
 pre{
-    margin-top: 0px;
-    float:right;
-    background: #FFE4E1;
-    border: none;
+      border: none;
     font-style: italic;
      font-size: 20px;
      font-family: 'Dosis', sans-serif;
-     color: red;
+    margin-top: 0px;
    }
+
+
 .navbar{
-  margin-top: 50px;
+  margin-top: 5px;
   height: 50px;
 }
-.navbar .container {
+
+.navbar  {
  font-family: cursive;
  font-family: 'Tangerine', sans-serif;
  font-size: 30px;
-  background: white;
-height: 50px;
+ background: white;
+
 }
 
 .navbar-brand{
   font-family: 'Tangerine', sans-serif;
   font-size: 50px;
 }
-.nav-collapse ul {
-  margin-left: 30px;
+
+.nav-collapse{
+  margin: auto;
+  height:50px;
 }
-.navbar-form {
-  position: relative;
-  bottom: 7px;
-}
+
+
 
 #searchInput{
 font-size: 20px;
 width:200px;
+margin-bottom: 15px;
+}
+
+#searchInputspan{
+margin-bottom: 15px;
 }
 
 
@@ -163,9 +165,11 @@ width:200px;
 /* --------------------------------------
    Carousel
    -------------------------------------- */
-#myCarousel .item {
-  height:400px;
-  margin-top: 60px;
+#myCarousel .item img {
+  min-width: 100%;
+  min-height: 300px;
+  max-height: 700px;
+
 }
 
 .carousel-caption{
@@ -175,23 +179,16 @@ width:200px;
 .carousel-caption h4{
     font-size: 32px;
 }
-#slide1 {
-   background: url('../../images1/landscape.jpg') top center no-repeat;
-}
 
-#slide2 {
-   background: url('../../images1/2.jpg') top center no-repeat;
-}
-
-#slide3 {
-   background: url('../../images1/buddha.jpg') top center no-repeat;
+#pfeaturesHeading {
+  text-align: center;
 }
 
 #pfeaturesHeading img{
   margin-left: 15px;
   width:100px;
   height:100px;
-  float:left;
+  /*float:left;*/
   margin-top: 5px;
   border-radius: 300px;
 }
@@ -205,7 +202,6 @@ width:200px;
 .img-rounded {
   width:250px;
   height:250px;
-
 }
 
 .img-rounded:hover {
@@ -216,8 +212,12 @@ width:200px;
   margin-top: 15px;
 }
 
+.panel img{
+  max-width: 80%;
+}
+
 .tabbable   {
-  background: black;
+  background: grey;
 
 }
 
@@ -226,13 +226,15 @@ width:200px;
   float:none;
 }
 
-
-
 #searchInput1{
   float: left;
-  width: 400px;
-
+  width: 60%;
 }
+
+
+
+
+
 /* --------------------------------------
    Global Styles
    -------------------------------------- */
@@ -265,14 +267,11 @@ body {
    width:140px;
  }
 
- #logo{
-   width:50px;
-   height: 50px;
-   border-radius: 50px;
-   position: absolute;
-   top:50px;
-   left:10px;
+ .navbar-brand{
+   font-family: 'Tangerine', sans-serif;
+   font-size: 40px;
  }
+
 #searchInput1 {
   width:140px;
 }
@@ -282,24 +281,12 @@ body {
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
 
-  .jumbotron{
-    height:380px;
-  }
+
   #myCarousel .item {
     height:350px;
   }
 
-  #slide1 {
-     background: url('../../images1/landscape.jpg') top center no-repeat;
-  }
 
-  #slide2 {
-     background: url('../../images1/snow.jpg') top center no-repeat;
-  }
-
-  #slide3 {
-     background: url('../../images1/raviverma.jpg') top center no-repeat;
-  }
   .carousel-caption{
     font-size: 16px;
   }
@@ -307,24 +294,16 @@ body {
   .carousel-caption h4{
       font-size: 22px;
   }
+
+
 }
+
 
 /* Large desktop */
 @media (min-width: 1200px) {
 
-  #myCarousel .item {
-    height:500px;
-  }
-  #slide1 {
-     background: url('../../images1/landscape.jpg') top center no-repeat;
-  }
 
-  #slide2 {
-     background: url('../../images1/snow.jpg') top center no-repeat;
-  }
 
-  #slide3 {
-     background: url('../../images1/raviverma.jpg') top center no-repeat;
-  }
+
 
 }
